--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <h2 id="question">¿Me amas? </h2>
+    <h2 id="question">¿Me quieres? </h2>
     <img
          id="gif"
          alt="gif"
@@ -22,4 +22,5 @@
 
   <script src="scrips.js"></script>
 </body>
+
 </html>
