--- a/amor.html
+++ b/amor.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Te amo 💖</title>
+  <title>Te quiero 💖</title>
   <style>
     body {
       margin: 0;
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <h1>💖 TE AMO 💖</h1>
+  <h1>💖💖</h1>
 
   <!-- Órbita con gatitos -->
   <div class="orbit">
